# syndication

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  LICENSE-MIT  README.md
.github/workflows/: build.yml
examples/: read.rs
src/: category.rs  entry.rs  feed.rs  generator.rs  guid.rs  image.rs  lib.rs  link.rs  person.rs  text_input.rs
test-data/: atom.xml
