[package]
name = "syndication"
version = "0.5.0"
authors = ["Tom Shen <tom@shen.io>", "Caleb Jones <code@calebjones.net>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tomshen/rust-syndication"
description = "Library for serializing Atom and RSS web feeds"
keywords = ["atom", "blog", "feed", "rss", "syndication"]
exclude = ["test-data/*"]

[dependencies]
atom_syndication = "0.3"
rss = "0.3"
chrono = "0.2"
